# ssp

./: CMakeLists.txt  LICENSE  README.md
cmake/: ssp-config.cmake
examples/: CMakeLists.txt  demo1.cpp
include/ssp/: serial.h
src/: serial_linux.cpp  serial_macos.cpp  serial_win32.cpp
